--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.2",
     "history": "^5.0.0",
     "localforage": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
