--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "dependencies": {
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.2",
+    "bufferutil": "^4.0.1",
     "history": "^5.0.0",
     "localforage": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-h5-audio-player": "^3.3.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
