--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.4.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "fibers": "^3.1.0",
     "file-loader": "^5.0.2",
     "gh-pages": "^3.1.0",
     "html-loader": "^1.1.0",
@@ -50,11 +52,16 @@
     "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "querystringify": ">=2.1.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7",
     "uglifyjs-webpack-plugin": "^2.2.0",
