--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config ./webpack/webpack.config.js --open --env=dev",
     "build": "webpack --config ./webpack/webpack.config.js --env=prod",
+    "deploy": "npm run build && netlify deploy --dir=dist --prod",
     "deploy:gh-pages": "rimraf dist && npm run build && rimraf dist/report.html && gh-pages -d dist",
     "lint": "eslint .",
     "format": "pretty-quick",
@@ -22,7 +23,7 @@
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-h5-audio-player": "^3.3.0",
+    "react-h5-audio-player": "^3.3.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -30,27 +31,27 @@
     "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@react-mock/fetch": "^0.3.0",
-    "@testing-library/react": "^10.4.7",
-    "@types/jest": "^26.0.5",
+    "@testing-library/react": "^10.4.8",
+    "@types/jest": "^26.0.10",
     "@types/react-dom": "^16.9.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.4.0",
+    "eslint": "^7.7.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "fibers": "^3.1.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "fibers": "^3.1.1",
     "file-loader": "^5.0.2",
     "gh-pages": "^3.1.0",
-    "html-loader": "^1.1.0",
+    "html-loader": "^1.2.1",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.1.0",
+    "jest": "^26.4.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
@@ -59,17 +60,17 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "querystringify": ">=2.1.1",
+    "querystringify": "^2.2.0",
     "rimraf": "^3.0.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
-    "ts-loader": "^8.0.1",
+    "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.1.2"
   }
 }
